@@ -12,7 +12,7 @@ public class ModuloAtencionStepdefs {
 
     @Given("que la siguiente medica esta autenticada y registrada")
     public void queLaSiguienteMedicaEstaAutenticadaYRegistrada(List<Map<String, String>> tabla) {
-        String matricula = tabla.getFirst().get("matricula");
+        String matricula = tabla.get(0).get("matricula");
         medico = new Medico(matricula);
         throw new PendingException();
     }
